--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -11,26 +11,37 @@
 
 <body>
     <nav class="light-blue lighten-1" role="navigation">
-        <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Logo</a>
+        <div class="nav-wrapper container">
+            <a id="logo-container" href="#" class="brand-logo">Logo</a><br>
             <ul class="right hide-on-med-and-down">
                 <li><a href="#">Navbar Link</a></li>
             </ul>
             <ul id="nav-mobile" class="side-nav">
                 <li><a href="#">Navbar Link Mobile</a></li>
             </ul>
-            <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+            <a href="#" data-activates="nav-mobile" class="button-collapse">
+                <i class="material-icons">menu</i></a>
         </div>
     </nav>
+
+    <div class="nav-wrapper container">
+        <h5 align="left"><a href="login">Log in</a></h5>
+        <h5 align="right"><a href="registration">Registration</a></h5>
+    </div>
+
     <div class="section no-pad-bot" id="index-banner">
         <div class="container">
             <br>
             <br>
             <h1 class="header center orange-text">Starter Template</h1>
             <div class="row center">
-                <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+                <h5 class="header col s12 light">A modern responsive front-end
+                    framework based on Material Design
+                </h5>
             </div>
             <div class="row center">
-                <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light orange">Get Started</a>
+                <a href="http://materializecss.com/getting-started.html"
+                   id="download-button" class="btn-large waves-effect waves-light orange">Get Started</a>
             </div>
             <br>
             <br>
@@ -54,23 +65,40 @@
             <div class="row">
                 <div class="col s12 m4">
                     <div class="icon-block">
-                        <h2 class="center light-blue-text"><i class="material-icons"><a href="http://materializecss.com/getting-started.html">Material</a></i></h2>
+                        <h2 class="center light-blue-text">
+                            <i class="material-icons">
+                                <a href="http://materializecss.com/getting-started.html">Material</a></i></h2>
                         <h5 class="center">Speeds up development</h5>
-                        <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
+                        <p class="light">We did most of the heavy lifting for you
+                            to provide a default stylings that incorporate our
+                            custom components. Additionally, we refined animations
+                            and transitions to provide a smoother experience for developers.</p>
                     </div>
                 </div>
                 <div class="col s12 m4">
                     <div class="icon-block">
-                        <h2 class="center light-blue-text"><i class="material-icons"><a href="http://semantic-ui.com/">Semantic</a></i></h2>
+                        <h2 class="center light-blue-text">
+                            <i class="material-icons">
+                                <a href="http://semantic-ui.com/">Semantic</a></i></h2>
                         <h5 class="center">User Experience Focused</h5>
-                        <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
+                        <p class="light">By utilizing elements and principles of
+                            Material Design, we were able to create a framework that
+                            incorporates components and animations that provide more
+                            feedback to users. Additionally, a single underlying
+                            responsive system across all platforms allow for a more
+                            unified user experience.</p>
                     </div>
                 </div>
                 <div class="col s12 m4">
                     <div class="icon-block">
-                        <h2 class="center light-blue-text"><i class="material-icons"><a href="http://foundation.zurb.com/">Foundation</a></i></h2>
+                        <h2 class="center light-blue-text">
+                            <i class="material-icons">
+                                <a href="http://foundation.zurb.com/">Foundation</a></i></h2>
                         <h5 class="center">Easy to work with</h5>
-                        <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+                        <p class="light">We have provided detailed documentation as
+                            well as specific code examples to help new users get
+                            started. We are also always open to feedback and can
+                            answer any questions a user may have about Materialize.</p>
                     </div>
                 </div>
             </div>
@@ -85,7 +113,10 @@
             <div class="row">
                 <div class="col l6 s12">
                     <h5 class="white-text">Company Bio</h5>
-                    <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
+                    <p class="grey-text text-lighten-4">We are a team of college
+                        students working on this project like it's our full time job.
+                        Any amount would help support and continue development on
+                        this project and is greatly appreciated.</p>
                 </div>
                 <div class="col l3 s12">
                     <h5 class="white-text">Settings</h5>
