--- a/products/templates/categories.html
+++ b/products/templates/categories.html
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="row">
 
-    {% for category in categories %}
+    {% for category in product_categories %}
       <div class="col s12 m6 l3">
-        <a href="{% url 'category_detail' category_slug=category.slug %}">{{ category.name }}</a>
+        <a href="{{ category.get_absolute_url }}">{{ category.name }}</a>
 
         <img src="{{ category.image.url }}">
       </div>
