--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -1,20 +1,22 @@
 {% extends 'base.html' %}
 {% block content %}
+
 <div class="container">
+  {% include 'categories.html' %}
   <div class="row">
 
     {% for product in products %}
       <div class="col s12 m6 l3">
-        <a href="{% url 'product_detail' product_slug=product.slug %}">{{ product.name }}
+        <a href="{{ product.get_absolute_url }}">{{ product.name }}
           <img src="{{ product.product_images.first.image.url }}" width='200' alt="{{ product.name }}">
         </a>
 
-        <div>Price: {{ product.price }}</div>
-        <div> Brand: {{ product.brand }}</div>
+        <div>Price: {{ product.price }} {{ product.currency.symbol }}</div>
+        <div> <a href="{{ product.brand.get_absolute_url }}">Brand: {{ product.brand }}</a></div>
 
         <div> Categories:
           {% for category in  product.categories.all %}
-            <a href="{% url 'category_detail' category_slug=category.slug %}">{{ category }}</a>
+            <a href="{{ category.get_absolute_url }}">{{ category }}</a>
             {% if forloop.last %}. {% else %},{% endif %}
 
           {% endfor %}
