--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -2,9 +2,8 @@
 	<title> login </title>
 </head>
 <style>
-   body{
-    background-color: #81AFDE;
-   }
+   body{background-color: #81AFDE;}
+   font{color: white}
 </style>
 
 {% extends 'base.html' %}
@@ -14,6 +13,18 @@
     <div class="row">
 		<h1>Log in</h1>
 		<hr>
+		<form method="post">
+        Username:
+        <font>
+            <input id="username" type="text">
+        </font>
+        Password:
+        <font>
+            <input id="password" type="text">
+        </font>
 	</div>
+	<form>
+  		<button>Submit</button>
+	</form>
 </div>
 {% endblock %}
