--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 {% load static %}
+{% load products_tags %}
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
@@ -26,6 +27,9 @@
             <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
         </div>
     </nav>
+    {% for currency in currencies %}
+      <a href="{% url 'choose_currency' %}?currency={{ currency.name }}">{{ currency.symbol }}</a>
+    {% endfor %}
 
     {% block content %}
 
