--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -14,14 +14,15 @@
 		<h1>Log in</h1>
 		<hr>
 		<form method="post">
-        Username:
-        <font>
-            <input id="username" type="text">
-        </font>
-        Password:
-        <font>
-            <input id="password" type="text">
-        </font>
+            Username:
+            <font>
+                <input id="username" type="text">
+            </font>
+            Password:
+            <font>
+                <input id="password" type="text">
+            </font>
+        </form>
 	</div>
 	<form>
   		<button>Submit</button>
