--- a/accounts/templates/registration.html
+++ b/accounts/templates/registration.html
@@ -14,47 +14,51 @@
     <div class="row">
 		<h1>Registration</h1>
 		<hr>
-        <form method="post">
-        Username:
-        <font>
-            <input id="username" type="text">
-        </font>
-        Password:
-        <font>
-            <input id="password" type="text">
-        </font>
-        Confirm password:
-        <font>
-            <input id="password_conf" type="text">
-        </font>
-        First name:
-        <font>
-            <input id="first_name" type="text">
-        </font>
-        Second name:
-        <font>
-            <input id="second_name" type="text" placeholder="">
-        </font>
-        Mobile number:
-        <font>
-            <input id="mobile_number" type="text" placeholder="example: +38-067-XXX-XX-XX">
-        </font>
-        Home address:
-        <font>
-            <input id="home_address" type="text">
-        </font>
-        Gender:
-        <font>
-            <select id="gender">
-                <option>unknown</option>
-                <option value="male">male</option>
-                <option value="female">female</option>
-            </select>
-        </font>
+        <form action ='' method="POST">
+            {% csrf_token %}
+            {{ form.as_p }}
+            Username:
+            <font>
+                <input id="username" type="text">
+            </font>
+            Password:
+            <font>
+                <input id="password" type="text">
+            </font>
+            E-mail:
+            <font>
+                <input id="email" type="email">
+            </font>
+            Confirm password:
+            <font>
+                <input id="password_conf" type="text">
+            </font>
+            First name:
+            <font>
+                <input id="first_name" type="text">
+            </font>
+            Second name:
+            <font>
+                <input id="second_name" type="text">
+            </font>
+            Mobile number:
+            <font>
+                <input id="mobile_number" type="text" placeholder="example: +38-067-XXX-XX-XX">
+            </font>
+            Home address:
+            <font>
+                <input id="home_address" type="text">
+            </font>
+            Gender:
+            <font>
+                <select id="gender">
+                    <option>unknown</option>
+                    <option value="male">male</option>
+                    <option value="female">female</option>
+                </select>
+            </font>
+            <button type="submit">Save</button>
         </form>
     </div>
-    <form>
-        <button>Submit</button>
-    </form>
 </div>
 {% endblock %}
