--- a/products/templates/categories.html
+++ b/products/templates/categories.html
@@ -1,3 +1,4 @@
+{% load products_tags %}
 <div class="container">
   <div class="row">
 
@@ -17,4 +18,5 @@
       <p>No categories available.</p>
     {% endfor %}
   </div>
+{% include 'recently_viewed_products.html' %}
 </div>
